--- a/Læringsaplikasjon/Læringsaplikasjon/Læringsaplikasjon.csproj
+++ b/Læringsaplikasjon/Læringsaplikasjon/Læringsaplikasjon.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -97,6 +98,18 @@
       <Isolated>False</Isolated>
       <EmbedInteropTypes>True</EmbedInteropTypes>
     </COMReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Trump mlg.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Crying-Obama.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Bock.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Meksikanere.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
