--- a/Læringsaplikasjon/Læringsaplikasjon/Læringsaplikasjon.csproj
+++ b/Læringsaplikasjon/Læringsaplikasjon/Læringsaplikasjon.csproj
@@ -46,6 +46,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ferdigboks.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ferdigboks.Designer.cs">
+      <DependentUpon>ferdigboks.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -54,6 +60,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="ferdigboks.resx">
+      <DependentUpon>ferdigboks.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -65,6 +74,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -97,6 +107,15 @@
       <Isolated>False</Isolated>
       <EmbedInteropTypes>True</EmbedInteropTypes>
     </COMReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\braDatBoi.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\dårligDatBoi.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\okDatBoi.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
